modify get user details api
